--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
   <li><a href="/about/">Hobbies</a></li>
-  <li><a href="/resume/">Resume</a></li>
+  <li><a href="/resume/resume.pdf">Resume</a></li>
 </ul>
 
 </nav>
@@ -167,7 +167,7 @@
     <section>
   <h1>About Me</h1>
   <p>A little something about me.</p>
-  <p><a href="http://blog.nicksdevspot.com">[old]blog.nicksdevspot</a></p> 
+  <p><a href="http://blog.nicksdevspot.com">[old] blog.nicksdevspot</a></p> 
   <p><a href="http://upload-app.nicksdevspot.com">upload-app.nicksdevspot</a></p> 
   <p><a href="http://sample-app.nicksdevspot.com">sample-app.nicksdevspot</a></p>
 </section>
