testing resume and image

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -60,6 +60,7 @@
   <li><a href="/blog/archives">Archives</a></li>
   <li><a href="/about/">Hobbies</a></li>
   <li><a href="/resume/resume.pdf">Resume</a></li>
+  <li><a href="/images/bird_32_gray.png">test</a></li>
 </ul>
 
 </nav>
