--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,8 +59,7 @@
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
   <li><a href="/about/">Hobbies</a></li>
-  <li><a href="/resume/resume.pdf">Resume</a></li>
-  <li><a href="/images/bird_32_gray.png">test</a></li>
+  <li><a href="/resume/Resume.pdf">Resume</a></li>
 </ul>
 
 </nav>
