slight update to about me

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -84,7 +84,7 @@
 
 <p>This blog was originally written by messing around with Michael Hartl&rsquo;s Ruby on Rails Tutorial and Ryan Bates Railscasts. It was later changed to Octopress for built in functionality and a more static webapp so I wouldn&rsquo;t have to worry about the model part of mvc.</p>
 
-<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. My hobbies include videogames, sports, nutrition, yoga, reading, watching tv, and picking up random scraps of knowledge (particularily about programming).</p>
+<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. My hobbies include videogames, sports, nutrition, yoga, reading, watching tv, travel, and picking up random scraps of knowledge (particularily about programming).</p>
 
 <p>Currently my favorite videogame is League of Legends (licknau) where I&rsquo;ve made it up to 79 LP in Plat 1 (putting me in the top 1-2% of the playerbase). Followed by Tetris where I actually hit the God of Tetris Rank (on Facebook&rsquo;s tetris battle). I&rsquo;ve always loved videogames, particularily computer games (WoW, Counterstrike, Age of Empires) and Nintendo (Super Smash Bros, Final Fantasy, DS games).</p>
 
