added table of contents to about me

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,15 @@
   <meta name="author" content="Nicholas Lau">
 
   
-  <meta name="description" content="About Me Jul 15th, 2015 4:24 pm Being a computer science major, I&rsquo;ve always wanted a website and since I&rsquo;ve been wanting to learn Rails& &hellip;">
+  <meta name="description" content="About Me Jul 15th, 2015 4:24 pm Hello
+Hobbies Sports
+Videogames
+Sports
+Fitness
+Reading
+Learning
+Travel
+Programming Technologies behind this App &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -80,33 +88,95 @@
   
   <p><img src="/images/vietnam/7_sapa/sapa_looking_away.jpg" title="'sapa_looking_away.jpg'" ></p>
 
+<ul>
+<li><a href="#hello">Hello</a></li>
+<li><a href="#hobbies">Hobbies</a>
+
+<ul>
+<li><a href="#sports">Sports</a></li>
+<li><a href="#videogames">Videogames</a></li>
+<li><a href="#sports">Sports</a></li>
+<li><a href="#fitness">Fitness</a></li>
+<li><a href="#reading">Reading</a></li>
+<li><a href="#learning">Learning</a></li>
+<li><a href="#travel">Travel</a></li>
+<li><a href="#programming">Programming</a></li>
+</ul>
+</li>
+<li><a href="#technologies">Technologies behind this App</a></li>
+</ul>
+
+
+<p><a name="Hello"></a></p>
+
+<h3>Hello</h3>
+
 <p>Being a computer science major, I&rsquo;ve always wanted a website and since I&rsquo;ve been wanting to learn Rails&hellip; two birds with one stone! You can find the source code at github.</p>
 
 <p>This blog was originally written by messing around with Michael Hartl&rsquo;s Ruby on Rails Tutorial and Ryan Bates Railscasts. It was later changed to Octopress for built in functionality and a more static webapp so I wouldn&rsquo;t have to worry about the model part of mvc.</p>
 
-<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. My hobbies include videogames, sports, nutrition, yoga, reading, watching tv, travel, and picking up random scraps of knowledge (particularily about programming).</p>
+<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. I have a diverse range of interests, including videogames, sports, nutrition, meditation, yoga, reading, watching tv, music, organization, clothing, travel, and picking up random scraps of knowledge (particularily about programming).</p>
 
-<p>Currently my favorite videogame is League of Legends (licknau) where I&rsquo;ve made it up to 79 LP in Plat 1 (putting me in the top 1-2% of the playerbase). Followed by Tetris where I actually hit the God of Tetris Rank (on Facebook&rsquo;s tetris battle). I&rsquo;ve always loved videogames, particularily computer games (WoW, Counterstrike, Age of Empires) and Nintendo (Super Smash Bros, Final Fantasy, DS games).</p>
+<p><a name="hobbies"></a></p>
 
-<p>I adore sports, I&rsquo;ve played hockey for about 15 years, traveling to tournaments as far as AAU junior olympics in Philadelphia, coaching my high school&rsquo;s JV team, and playing for the club team at UCSD. Pingpong was the way my friends and I passed the time in high school (we had a table in our garage). The insanely cheap $4/hr billiards hall at UCSD gameroom actually probably came to cost me a couple hundred dollars&hellip; Played intramural tennis and loved hitting around with friends during highschool and throughout college. Oh, and I ran track and crosscountry for my highschool team, managing a 5 minute mile!</p>
+<h3>Hobbies</h3>
 
-<p>I mostly just lift weights at the local YMCA now. I&rsquo;m running the Ice Cream Fitness routine which is a modified 5x5 that includes more hypertrophy. Researching fitness lead to an interest in nutrition which is a vast and incredibly complicated subject. However, I&rsquo;ve learned the basics and know enough to set and accomplish my goals. At the time of writing I&rsquo;ve cut down my bodyfat by about 8 pounds and reduced by bodyfat percentage by around 3%. I&rsquo;ve done this by eating at a deficit of 400 calories with the goal of cutting bodyfat down to 10%. Working out a lot leaves your muscles very tight, leading me into yoga and meditation. I do yoga weekly to stay limber and meditate daily to keep focus sharp.</p>
+<p><a name="videogames"></a></p>
+
+<h4>Videogames</h4>
+
+<p>I would be lying if I said videogames didn&rsquo;t influence my decision to major in Computer Science. Currently my favorite videogame is League of Legends (licknau) where I&rsquo;ve made it up to 79 LP in Plat 1 (putting me in the top 1-2% of the playerbase). Followed by Tetris where I&rsquo;ve hit rank cap on every version I&rsquo;ve played, Rank 100 God of Tetris on Facebook&rsquo;s tetris battle and Rank 20 with 999 points on tetrisfriends. I&rsquo;ve always loved videogames, particularily computer games (WoW, Counterstrike, Age of Empires) and Nintendo (Super Smash Bros, Final Fantasy, DS games).</p>
+
+<p><a name="sports"></a></p>
+
+<h4>Sports</h4>
+
+<p>I adore sports and have casually played most of them, I&rsquo;ve played hockey for about 15 years, traveling to tournaments as far as AAU junior olympics in Philadelphia, coaching my high school&rsquo;s JV team, and playing for the club team at UCSD. Pingpong was the way my friends and I passed the time in high school (we had a table in our garage). The insanely cheap $4/hr billiards hall at UCSD gameroom actually probably came to cost me a couple hundred dollars&hellip; Played intramural tennis and loved hitting around with friends during highschool and throughout college. Oh, and I ran track and crosscountry for my highschool team, managing a 5 minute mile! During Highschool my friends and I would pass time playing wiffleball, soccer, football, golf, wrestling, really anything you could imagine&hellip; even imaginary things like golf hockey and improvised rugby.</p>
+
+<p><a name="fitness"></a></p>
+
+<h4>Fitness</h4>
+
+<p>I mostly just lift weights at the local YMCA now. I&rsquo;m running the Ice Cream Fitness routine which is a modified 5x5 that includes more hypertrophy. Researching fitness lead to an interest in nutrition which is a vast and incredibly complicated subject. However, I&rsquo;ve learned the basics and know enough to set and accomplish my goals. At the time of writing I&rsquo;ve cut down my bodyfat by about 8 pounds and reduced by bodyfat percentage by around 3%. I&rsquo;ve done this by eating at a deficit of 400 calories with the goal of cutting bodyfat down to 10%. Working out a lot leaves your muscles very tight, leading me into yoga and meditation. I do yoga weekly to stay limber and meditate daily to keep my focus sharp.</p>
+
+<p><a name="reading"></a></p>
+
+<h4>Reading</h4>
 
 <p>Although my reading suffered considerably when I discovered videogames, I have read hundreds and hundreds of books. I&rsquo;m a huge scifi and fantasy nerd, my favorites being Isaac Asimov (particularily the Foundation Trilogy) and the Lord of the Rings trilogy. Oh, and I wouldn&rsquo;t have a childhood without Harry Potter, waiting for that 7th book was pure torture. After graduating I found myself in a void of learning. Books, particularily nonfiction, have helped fill this void. Some books I&rsquo;ve enjoyed include: &lsquo;The Autobiography of Benjamin Franklin&rsquo;, Alchemist by Paulo Coelho, Meditations by Aurelius.</p>
 
-<p>Programming has very much become a hobby to me. I am an avid reader of Quora, reading it everyday and often using it for a bedtime story. The enthusiasm and intelligence of the answers has given me engineers to look up to and aspire to as I begin my career. Quora answers often link to other resources, through which I have discovered incredible answers on stackoverflow, random life changing advice on speed reading and meditation, what languages I should learn next (&ldquo;scripting language (e.g. Python) that you can use as your Swiss army knife for quick tasks&rdquo;). It&rsquo;s also introduced me to anki, a (perhaps even &ldquo;the&rdquo;) flashcard app, that helps me remember everything I learn so that I can internalize it.</p>
+<p><a name="learning"></a></p>
 
-<p>In the last couple months, I&rsquo;ve learned and extended my knowledge of several technologies: git, sublime text (using lints, bracket addons, and its incredibly flexible settings), command line interface, basic scripting with bash and python, UML (Unified Modeling Language), Ruby on Rails (using with RSpec, Capybara, New Relic, Heroku, PostgreSQL, and much much more), Ruby (through codewars.com and codeacademy), Object Orientated Programming and software development (through Code Complete 2, stack overflow, and simply looking up every possible question I could think of), C++ (google&rsquo;s opensourced codelabs - style guide), DNS (through struggles with gandi.net). Furthermore, I&rsquo;ve been reading blogs such as www.joelonsoftware.com and steve-yegge.blogspot.com which have helped me understand the software industry better (which is important since I was fairly clueless before).</p>
+<h4>Learning</h4>
 
-<p>This blog webapp utilizes the technologies:</p>
+<p>Graduating from UCSD meant the end of Sixteen years in the education system. When I read books like Meditations or Programming Pearls there were no longer tests to enforce knowledge retention. Being structured and having a passion for organization, I setup a cumulative knowledge testing workflow that makes use of text editors and evernote reminders. This gives me a way to store my knowledge base and continually re-expose me to reinforce the interesting things that I find.</p>
+
+<p><a name="travel"></a></p>
+
+<h4>Travel</h4>
+
+<p><a name="programming"></a></p>
+
+<h4>Programming</h4>
+
+<p>Programming has very much become a hobby to me. I am an avid reader of resources like r/programming, Quora, hackernews, stackoverflow etc. The enthusiasm and intelligence of the posts and discussions inspire me and give me something to aspire to as I begin my career. Through these resources I have discovered incredible, life-changing advice on things like speed reading, meditation, programming tricks like the anti-arrowhead pattern, and so much more.</p>
+
+<p>In the last couple months, I&rsquo;ve learned and extended my knowledge of several technologies: git, sublime text (using lints, bracket addons, and its incredibly flexible settings), command line interface, basic scripting with bash and python, UML (Unified Modeling Language), Ruby on Rails (using with RSpec, Capybara, New Relic, Heroku, PostgreSQL, and much much more), Ruby (through codewars.com and codeacademy), Object Orientated Programming and software development (through Code Complete 2, stack overflow, and simply looking up every possible question I could think of), C++ (google&rsquo;s opensourced codelabs - style guide), DNS (through struggles with gandi.net), Javascript (through Crockfords yui Lectures and MDN&rsquo;s Guides), Distributed Systems (Research papers like Amazon Dynamo and Google MapReduce), DIY projects with my Raspberry Pi. Furthermore, I&rsquo;ve been reading blogs such as www.joelonsoftware.com and steve-yegge.blogspot.com which have helped me understand the software industry better (which is important since I was fairly clueless before).</p>
+
+<p><a name="technologies"></a></p>
+
+<h4>Technologies behind this app</h4>
+
+<p>This blog webapp utilizes the technologies/services:</p>
 
 <ul>
 <li>Ruby on Rails obviously!</li>
-<li>Devise for user, session, and password management.</li>
-<li>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</li>
-<li>Rspec and Capybara for quick automated testing.</li>
+<li><del>Devise for user, session, and password management.</del></li>
+<li><del>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</del></li>
+<li><del>Rspec and Capybara for quick automated testing.</del></li>
+<li>Octopress, powered by Jekyll. A blogging framework for hackers.</li>
 <li>Heroku for hosting online as well as the New Relic addon to stop the dyno from idling.</li>
-<li>gandi.net for hosting and dns services</li>
+<li>gandi.net for hosting and dns services.</li>
 </ul>
 
 
