added categories, enabled octopress

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -279,9 +279,6 @@ Programming Technologies behind this App Hello Being a computer &hellip;">
 </section>
 
 
-
-
-
   
 </aside>
 
@@ -290,7 +287,10 @@ Programming Technologies behind this App Hello Being a computer &hellip;">
   </div>
   <footer role="contentinfo"><p>
   Copyright &copy; 2015 - Nicholas Lau -
+  <span class="credit">Definitely not Powered by <a href="http://octopress.org">Octopress</a>. Background image by <a href="http://www.flickr.com/photos/89433098@N04/">Florian</a></span>
+  <!--
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>. Design by <a href="http://octopressthemes.com">Octopress Themes</a>. Background image by <a href="http://www.flickr.com/photos/89433098@N04/">Florian Kraft Fotografie</a></span>
+  -->
 </p>
 
 </footer>
