--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -263,9 +263,6 @@ Computer Science, B.S.</p>
 </section>
 
 
-
-
-
   
 </aside>
 
@@ -274,7 +271,10 @@ Computer Science, B.S.</p>
   </div>
   <footer role="contentinfo"><p>
   Copyright &copy; 2015 - Nicholas Lau -
+  <span class="credit">Definitely not Powered by <a href="http://octopress.org">Octopress</a>. Background image by <a href="http://www.flickr.com/photos/89433098@N04/">Florian</a></span>
+  <!--
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>. Design by <a href="http://octopressthemes.com">Octopress Themes</a>. Background image by <a href="http://www.flickr.com/photos/89433098@N04/">Florian Kraft Fotografie</a></span>
+  -->
 </p>
 
 </footer>
