--- a/public/about/index.html
+++ b/public/about/index.html
@@ -223,6 +223,8 @@ Programming Technologies behind this App Hello Being a computer &hellip;">
   
   
   
+    <div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
+  
 </div>
 
       
@@ -341,6 +343,15 @@ Programming Technologies behind this App Hello Being a computer &hellip;">
 </script>
 
 
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#appId=212934732101925&xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 
 
