--- a/public/index.html
+++ b/public/index.html
@@ -275,11 +275,11 @@
 
 <p>Book 6.54</p>
 
-<blockquote><p>&ldquo;That which is not good for the swarm is not good for the bee either&rdquo;</p></blockquote>
+<blockquote><p>&ldquo;That which is not good for the swarm is not good for the bee either.&rdquo;</p></blockquote>
 
 <p>Book 7.7</p>
 
-<blockquote><p>&ldquo;Think not so much of what you lack as of what you have: but of the things that you have, select the best, and then reflect how eagerly you would have sought them if you did not have them. At the same time, however, take care that you do not through being so pleased with them accustom yourself to overvalue them, so as to be disturbed if you should ever not have them&rdquo;</p></blockquote>
+<blockquote><p>&ldquo;Think not so much of what you lack as of what you have: but of the things that you have, select the best, and then reflect how eagerly you would have sought them if you did not have them. At the same time, however, take care that you do not through being so pleased with them accustom yourself to overvalue them, so as to be disturbed if you should ever not have them.&rdquo;</p></blockquote>
 
 </div>
   
