--- a/source/resources/games/PhaserBreakout/index.html
+++ b/source/resources/games/PhaserBreakout/index.html
@@ -74,7 +74,7 @@
         }
     }
 
-    this function (needed only on JSFiddle) take care of loading the images from the remote server
+    // this function (needed only on JSFiddle) take care of loading the images from the remote server
     function handleRemoteImagesOnJSFiddle() {
         game.load.baseURL = 'http://www.nicklau.io/resources/games/PhaserBreakout/';
         game.load.crossOrigin = 'anonymous';
