updated resume and about me

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -126,7 +126,7 @@ Programming Technologies behind this App &hellip;">
 
 <p>This blog was originally written by messing around with Michael Hartl&rsquo;s Ruby on Rails Tutorial and Ryan Bates Railscasts. It was later changed to Octopress for built in functionality and a more static webapp so I wouldn&rsquo;t have to worry about the model part of mvc.</p>
 
-<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. I have a diverse range of interests, including videogames, sports, nutrition, meditation, yoga, reading, watching tv, music, organization, clothing, travel, and picking up random scraps of knowledge (particularily about programming).</p>
+<p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. I have a diverse range of interests, including videogames, sports, nutrition, meditation, yoga, reading, watching tv, music, organization, clothing, travel, and picking up random scraps of knowledge and organizing them in my personal knowledge base.</p>
 
 <p><a name="hobbies"></a></p>
 
@@ -136,13 +136,13 @@ Programming Technologies behind this App &hellip;">
 
 <h4>Videogames</h4>
 
-<p>I would be lying if I said videogames didn&rsquo;t influence my decision to major in Computer Science. Currently my favorite videogame is League of Legends (licknau) where I&rsquo;ve made it up to 79 LP in Plat 1 (putting me in the top 1-2% of the playerbase). Followed by Tetris where I&rsquo;ve hit rank cap on every version I&rsquo;ve played, Rank 100 God of Tetris on Facebook&rsquo;s tetris battle and Rank 20 with 999 points on tetrisfriends. I&rsquo;ve always loved videogames, particularily computer games (WoW, Counterstrike, Age of Empires) and Nintendo (Super Smash Bros, Final Fantasy, DS games).</p>
+<p>I would be lying if I said videogames didn&rsquo;t influence my decision to major in Computer Science. Currently my favorite videogame is League of Legends (licknau) where I&rsquo;ve made it up to 79 LP in Plat 1 (putting me in the top 1-2% of the playerbase). Followed by Tetris where I&rsquo;ve hit rank cap on every version I&rsquo;ve played, Rank 110 God of Tetris on Facebook&rsquo;s tetris battle and Rank 20 with 999 points on tetrisfriends. I&rsquo;ve always loved videogames, particularily computer games (WoW, Counterstrike, Age of Empires) and Nintendo (Super Smash Bros, Final Fantasy, DS games).</p>
 
 <p><a name="sports"></a></p>
 
 <h4>Sports</h4>
 
-<p>I adore sports and have casually played most of them, I&rsquo;ve played hockey for about 15 years, traveling to tournaments as far as AAU junior olympics in Philadelphia, coaching my high school&rsquo;s JV team, and playing for the club team at UCSD. Pingpong was the way my friends and I passed the time in high school (we had a table in our garage). The insanely cheap $4/hr billiards hall at UCSD gameroom actually probably came to cost me a couple hundred dollars&hellip; Played intramural tennis and loved hitting around with friends during highschool and throughout college. Oh, and I ran track and crosscountry for my highschool team, managing a 5 minute mile! During Highschool my friends and I would pass time playing wiffleball, soccer, football, golf, wrestling, really anything you could imagine&hellip; even imaginary things like golf hockey and improvised rugby.</p>
+<p>I adore sports and have casually played most of them, I&rsquo;ve played hockey for about 15 years, traveling to tournaments as far as AAU junior olympics in Philadelphia, coaching my high school&rsquo;s JV team to a Division Championship, and playing for the club team at UCSD. My high school team won 5 Division Championships while I was with them, and placed second multiple times in D1 (that&rsquo;s out of five divisions each with about 10 teams). Pingpong was the way my friends and I passed the time in high school (we had a table in our garage). The insanely cheap $4/hr billiards hall at UCSD gameroom actually probably came to cost me a couple hundred dollars&hellip; Played intramural tennis and loved hitting around with friends during highschool and throughout college. Oh, and I ran track and crosscountry for my highschool team, running a sub 5 minute mile! During Highschool my friends and I would pass time playing wiffleball, soccer, football, golf, wrestling, really anything you could imagine&hellip; even imaginary things like golf hockey and improvised rugby.</p>
 
 <p><a name="fitness"></a></p>
 
@@ -166,6 +166,8 @@ Programming Technologies behind this App &hellip;">
 
 <h4>Travel</h4>
 
+<p>Backpacked around Asia for several months. I spent a month in Vietnam and Japan as well as a couple weeks in Hong Kong. It was an eye opening and life changing experience. It was a huge step out of my comfort zone and has given me a huge confidence boost. That I can set out on my own and be independent! I also had the opportunity to meet some fantastic people and share persepectives with them. The world is an expansive and interesting place, I look forward to seeing more of it in the future.</p>
+
 <p><a name="programming"></a></p>
 
 <h4>Programming</h4>
@@ -176,18 +178,18 @@ Programming Technologies behind this App &hellip;">
 
 <p><a name="technologies"></a></p>
 
-<h4>Technologies behind this app</h4>
+<h4>Technologies behind this Blog</h4>
 
 <p>This blog webapp utilizes the technologies/services:</p>
 
 <ul>
 <li>Ruby on Rails obviously!</li>
-<li><del>Devise for user, session, and password management.</del></li>
-<li><del>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</del></li>
-<li><del>Rspec and Capybara for quick automated testing.</del></li>
 <li>Octopress, powered by Jekyll. A blogging framework for hackers.</li>
 <li>Heroku for hosting online as well as the New Relic addon to stop the dyno from idling.</li>
 <li>gandi.net for hosting and dns services.</li>
+<li><del>Devise for user, session, and password management.</del></li>
+<li><del>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</del></li>
+<li><del>Rspec and Capybara for quick automated testing.</del></li>
 </ul>
 
 
