updated about me

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -185,8 +185,9 @@ Programming Technologies behind this App &hellip;">
 <ul>
 <li>Ruby on Rails obviously!</li>
 <li>Octopress, powered by Jekyll. A blogging framework for hackers.</li>
-<li>Heroku for hosting online as well as the New Relic addon to stop the dyno from idling.</li>
 <li>gandi.net for hosting and dns services.</li>
+<li>Rack::Cache for faster loading</li>
+<li><del>Heroku for hosting online as well as the New Relic addon to stop the dyno from idling.</del></li>
 <li><del>Devise for user, session, and password management.</del></li>
 <li><del>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</del></li>
 <li><del>Rspec and Capybara for quick automated testing.</del></li>
