fixed up pi post

--- a/public/index.html
+++ b/public/index.html
@@ -344,7 +344,7 @@ One-liner for Killing Applications ">
 
 <h3>Introduction</h3>
 
-<p><img src="/images/pi/pi.jpg" title="'pi.jpg'" ></p>
+<p><img src="/images/pi_post/pi.jpg" title="'pi.jpg'" ></p>
 
 <p>I&rsquo;ve always had trouble waking up. Sometimes I wake up, sometimes I don&rsquo;t, sometimes I just end up lying in bed&hellip; it&rsquo;s been a lifetime point of stress. But in the last few months I&rsquo;ve found a solution that works for me. I use the <a href="http://www.sleepcycle.com/">Sleep Cycle Phone App</a> to gently wake me up so I&rsquo;m ready for my out of bed alarm that goes off at 630 (weekdays) or 830 (weekends). This forces me to get out of bed to walk across the room and turn it off.</p>
 
