fixed projects sidebar, fixed up rails post

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -17,7 +17,8 @@ Fitness
 Reading
 Learning
 Travel
-Programming Technologies behind this App &hellip;">
+Programming
+Cooking Technologies behind this &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -112,6 +113,7 @@ Programming Technologies behind this App &hellip;">
 <li><a href="#learning">Learning</a></li>
 <li><a href="#travel">Travel</a></li>
 <li><a href="#programming">Programming</a></li>
+<li><a href="#cooking">Cooking</a></li>
 </ul>
 </li>
 <li><a href="#technologies">Technologies behind this App</a></li>
@@ -176,23 +178,11 @@ Programming Technologies behind this App &hellip;">
 
 <p>In the last couple months, I&rsquo;ve learned and extended my knowledge of several technologies: git, sublime text (using lints, bracket addons, and its incredibly flexible settings), command line interface, basic scripting with bash and python, UML (Unified Modeling Language), Ruby on Rails (using with RSpec, Capybara, New Relic, Heroku, PostgreSQL, and much much more), Ruby (through codewars.com and codeacademy), Object Orientated Programming and software development (through Code Complete 2, stack overflow, and simply looking up every possible question I could think of), C++ (google&rsquo;s opensourced codelabs - style guide), DNS (through struggles with gandi.net), Javascript (through Crockfords yui Lectures and MDN&rsquo;s Guides), Distributed Systems (Research papers like Amazon Dynamo and Google MapReduce), DIY projects with my Raspberry Pi. Furthermore, I&rsquo;ve been reading blogs such as www.joelonsoftware.com and steve-yegge.blogspot.com which have helped me understand the software industry better (which I feel is very important as a relatively new grad).</p>
 
-<p><a name="technologies"></a></p>
+<p><a name="cooking"></a></p>
 
-<h4>Technologies behind this Blog</h4>
+<h4>Cooking</h4>
 
-<p>This blog webapp utilizes the technologies/services:</p>
-
-<ul>
-<li>Ruby on Rails obviously!</li>
-<li>Octopress, powered by Jekyll. A blogging framework for hackers.</li>
-<li>gandi.net for hosting and dns services.</li>
-<li>Rack::Cache for faster loading</li>
-<li><del>Heroku for hosting online as well as the New Relic addon to stop the dyno from idling.</del></li>
-<li><del>Devise for user, session, and password management.</del></li>
-<li><del>Bootstrap to make things look pretty since I&rsquo;m no css wizard.</del></li>
-<li><del>Rspec and Capybara for quick automated testing.</del></li>
-</ul>
-
+<p>A relatively new interest of mine. Is mostly in the learning phase, browsing blogs and forums, taking notes and trying out some basic recipes. Hopefully something big comes out of this!</p>
 
   
     <footer>
@@ -233,8 +223,9 @@ Programming Technologies behind this App &hellip;">
     <li class="project"><a href="blog.nicklau.io/">Old Blog</a></li>
     <li class="project"><a href="upload-app.nicklau.io/">Photo Upload App</a></li>
     <li class="project"><a href="sample-app.nicklau.io/">Sample App</a></li>
-    <li class="project"><a href= /blog/2015/12/01/raspberry-pi-alarm/ }>Raspberry Pi Alarm (Under Construction)</a></li>
-    <li class="project"><a href= /blog/2015/12/07/learning-javascript/ }>Javascript Game (Under Construction)</a></li>
+    <li class="project"><a href= /blog/2015/12/01/raspberry-pi-alarm/ }>Raspberry Pi Alarm</a></li>
+    <li class="project"><a href= /blog/2015/12/07/learning-javascript/ }>Javascript Game</a></li>
+    <li class="project"><a href= /blog/2014/06/13/learning-ruby-on-rails/ }>Ruby on Rails</a></li>
   </ul>
 </section>
 <section>
