updated resume, changes to about me

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 
   
   <meta name="description" content="About Me Jul 15th, 2015 4:24 pm Hello
-Hobbies Sports
+Interests Sports
 Videogames
 Sports
 Fitness
@@ -18,7 +18,8 @@ Reading
 Learning
 Travel
 Programming
-Cooking Technologies behind this &hellip;">
+Cooking
+Routine Technologies &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -102,7 +103,7 @@ Cooking Technologies behind this &hellip;">
 
 <ul>
 <li><a href="#hello">Hello</a></li>
-<li><a href="#hobbies">Hobbies</a>
+<li><a href="#interests">Interests</a>
 
 <ul>
 <li><a href="#sports">Sports</a></li>
@@ -114,6 +115,7 @@ Cooking Technologies behind this &hellip;">
 <li><a href="#travel">Travel</a></li>
 <li><a href="#programming">Programming</a></li>
 <li><a href="#cooking">Cooking</a></li>
+<li><a href="#routine">Routine</a></li>
 </ul>
 </li>
 <li><a href="#technologies">Technologies behind this App</a></li>
@@ -126,13 +128,11 @@ Cooking Technologies behind this &hellip;">
 
 <p>Being a computer science major, I&rsquo;ve always wanted a website and since I&rsquo;ve been wanting to learn Rails&hellip; two birds with one stone! You can find the source code at github.</p>
 
-<p>This blog was originally written by messing around with Michael Hartl&rsquo;s Ruby on Rails Tutorial and Ryan Bates Railscasts. It was later changed to Octopress for built in functionality and a more static webapp so I wouldn&rsquo;t have to worry about the model part of mvc.</p>
-
 <p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. I have a diverse range of interests, including videogames, sports, nutrition, meditation, yoga, reading, watching tv, music, organization, clothing, travel, and picking up random scraps of knowledge and organizing them in my personal knowledge base.</p>
 
-<p><a name="hobbies"></a></p>
+<p><a name="interests"></a></p>
 
-<h3>Hobbies</h3>
+<h3>Interests</h3>
 
 <p><a name="videogames"></a></p>
 
@@ -183,6 +183,10 @@ Cooking Technologies behind this &hellip;">
 <h4>Cooking</h4>
 
 <p>A relatively new interest of mine. Is mostly in the learning phase, browsing blogs and forums, taking notes and trying out some basic recipes. Hopefully something big comes out of this!</p>
+
+<p><a name="routine"></a></p>
+
+<h4>Routine</h4>
 
   
     <footer>
