updated vim game

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -126,7 +126,7 @@ Routine Technologies &hellip;">
 
 <h3>Hello</h3>
 
-<p>Being a computer science major, I&rsquo;ve always wanted a website and since I&rsquo;ve been wanting to learn Rails&hellip; two birds with one stone! You can find the source code at github.</p>
+<p>Being a computer science major, I&rsquo;ve always wanted a website and since I&rsquo;ve been wanting to learn Rails&hellip; two birds with one stone! You can find the source code at <a href="https://github.com/nmlau/octopress">github</a>.</p>
 
 <p>I&rsquo;m Nick Lau, I graduated from UCSD in 2013 with a Bachelors of Science in Computer Science. I have a diverse range of interests, including videogames, sports, nutrition, meditation, yoga, reading, watching tv, music, organization, clothing, travel, and picking up random scraps of knowledge and organizing them in my personal knowledge base.</p>
 
