--- a/public/resources/games/vimMaze/index.html
+++ b/public/resources/games/vimMaze/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- <script src="js/phaser-arcade-physics.2.2.2.min.js"></script> -->
     <script src="js/phaser.js"></script>
-    <script src="src/modules/counter.js"></script>
+    <script src="src/Counter.js"></script>
     <script src="src/Boot.js"></script>
     <script src="src/Menu.js"></script>
     <script src="src/Game.js"></script>
