--- a/public/resources/games/vimMaze/index.html
+++ b/public/resources/games/vimMaze/index.html
@@ -5,14 +5,10 @@
     <meta charset="utf-8">
     <!-- <script src="js/phaser-arcade-physics.2.2.2.min.js"></script> -->
     <script type="text/javascript" src="js/phaser.js"></script>
-    <script type="text/javascript" src="src/Counter.js"></script>
-    <script type="text/javascript" src="src/Boot.js"></script>
-    <script type="text/javascript" src="src/Menu.js"></script>
-    <script type="text/javascript" src="src/Game.js"></script>
-    <script type="text/javascript" src="Counter.js"></script>
-    <script type="text/javascript" src="Boot.js"></script>
-    <script type="text/javascript" src="Menu.js"></script>
-    <script type="text/javascript" src="Game.js"></script>
+    <script type="text/javascript" src="js/Counter.js"></script>
+    <script type="text/javascript" src="js/Boot.js"></script>
+    <script type="text/javascript" src="js/Menu.js"></script>
+    <script type="text/javascript" src="js/Game.js"></script>
 </head>
 <body>
     <div id="game"></div>
