Updated Mindfulness post

--- a/public/index.html
+++ b/public/index.html
@@ -191,19 +191,27 @@
 
 <p>Here are some of my favorite quotes from Mindfulness in Plain English by Henepola Gunaratana. These first four are actually ideas that I keep on hand and reread on a weekly basis.</p>
 
-<p>pg 8</p>
+<p>Chapter 1: Meditation, Why Bother? pg 4</p>
 
-<blockquote><p>Cool ideas in how you grasp at the happy 10%, reject the sad 10% and ignore the neutral 80% (Retrieve actual Quote from book)</p></blockquote>
+<blockquote><p>&ldquo;The essence of our experience is change. Change is incessant. Moment by moment life flows by and it is never the same. Perpetual alteration is the essence of the perceptual universe. A thought springs up in your head and half a second later, it is gone. In comes another one, and that is gone too. A sound strikes your ears and then silence. Open your eyes and the world pours in, blink and it is gone. People come into your life and they leave again. Friends go, relatives die. Your fortunes go up and they go down. Sometimes you win and just as often you lose. It is incessant: change, change, change. No two moments ever the same.&rdquo;</p>
 
-<p>pg 29 (pdf version)</p>
+<p>&ldquo;There is not a thing wrong with this. It is the nature of the universe. But human culture has taught us some odd responses to this endless flowing. We categorize experiences. We try to stick each perception, every mental change in this endless flow into one of three mental pigeon holes. It is good, or it is bad, or it is neutral. Then, according to which box we stick it in, we perceive with a set of fixed habitual mental responses. If a particular perception has been labeled &lsquo;good&rsquo;, then we try to freeze time right there. We grab onto that particular thought, we fondle it, we hold it, we try to keep it from escaping. When that does not work, we go all-out in an effort to repeat the experience which caused that thought. Let us call this mental habit &lsquo;grasping&rsquo;.&rdquo;</p>
+
+<p>&ldquo;Over on the other side of the mind lies the box labeled &lsquo;bad&rsquo;. When we perceive something &lsquo;bad&rsquo;, we try to push it away. We try to deny it, reject it, get rid of it any way we can. We fight against our own experience. We run from pieces of ourselves. Let us call this mental habit &lsquo;rejecting&rsquo;. Between these two reactions lies the neutral box. Here we place the experiences which are neither good nor bad. They are tepid, neutral, uninteresting and boring. We pack experience away in the neutral box so that we can ignore it and thus return our attention to where the action is, namely our endless round of desire and aversion. This category of experience gets robbed of its fair share of our attention. Let us call this mental habit &lsquo;ignoring&rsquo;. The direct result of all this lunacy is a perpetual treadmill race to nowhere, endlessly pounding after pleasure, endlessly fleeing from pain, endlessly ignoring 90 percent of our experience. Than wondering why life tastes so flat. In the final analysis, it&rsquo;s a system that does not work.&rdquo;</p></blockquote>
+
+<p>Chapter 4: Attitude, pg 37 book, pg 28 (pdf version)</p>
 
 <blockquote><p>&ldquo;That initial perception will spark pleasant, unpleasant or neutral feelings. That is a universal phenomenon. It occurs in the mind of others just as it does in his, and he should see that clearly. Following these feelings various reactions may arise. He may feel greed, lust, or jealousy. He may feel fear, worry, restlessness or boredom. These reactions are universal. He simple notes them and then generalizes. He should realize that these reactions are normal human responses and can arise in anybody.&rdquo;</p></blockquote>
 
-<p>Chapter 11: Dealing with Distractions</p>
+<p>Chapter 12: Dealing with Distractions II, pg 124, pg 78 (pdf Version)</p>
 
-<blockquote><p>&ldquo;Like the breath, mental states have three stages: beginning, middle, and end. Often when you realize your concentration has drifted and you&rsquo;ve been thinking awhile&hellip; it&rsquo;s cause the mental state is near its end. You have to learn to find it at the beginning (as it rises out of your unconscious) and gently watch it through to its end.&rdquo;</p>
+<blockquote><p>&ldquo;Like the breath, mental states have three stages: beginning, middle, and end. Often when you realize your concentration has drifted and you&rsquo;ve been thinking awhile&hellip; it&rsquo;s cause the mental state is near its end. You have to learn to find it at the beginning (as it rises out of your unconscious) and gently watch it through to its end.&rdquo;</p></blockquote>
 
-<p>&ldquo;We are constantly conceptualizing, to solve our problems, to communicate. But with mindfulness you examine before conceptualization, and look at the pure nature of mental phenomena.&rdquo;</p></blockquote>
+<p>Chapter 12: Dealing with Distractions II, pg 128, Notes</p>
+
+<blockquote><p>&ldquo;We are constantly conceptualizing, to solve our problems, to communicate. But with mindfulness you examine before conceptualization, and look at the pure nature of mental phenomena.&rdquo;</p>
+
+<p>&ldquo;Conceptualization is an insidiously clever process. It creeps into you experience, and it simply takes over. When you hear a sound in meditation, pay bare attention to the experience of hearing. That and that only. What is really happening is so utterly simple that we can and do miss it altogether. Sound waves are striking the ear in a certain unique pattern. Those waves are being translated into electrical impulses within the brain and those impulses present a sound pattern to consciousness. That is all. No pictures. No mind movies. No concepts. No interior dialogues about the question. Just noise. Reality is elegantly simple and unadorned. When you hear a sound, be mindful of the process of hearing. Everything else is just added chatter. Drop it. The same rule applies to every sensation, every emotion, every experience you may have. Look closely at your own experience. Dig down through the layers of mental bric-a-brac and see what is really there. You will be amazed how simple it is, and how beautiful.&rdquo;</p></blockquote>
 
 <p>And many more to follow below!</p>
 
